# samp-discord-rpc

./: .gitignore  CMakeLists.txt  README.md  buttons.txt  logo.txt  samp-discord-plugin.sln
.github/workflows/: build.yml
samp-discord-plugin/: discord.cpp  discord.h  dllmain.cpp  env.h  samp-discord-plugin.vcxproj
samp-discord-plugin-test/: samp-discord-plugin-test.vcxproj
servers/: 104.234.180.106_7777.json  104.234.180.68_7777.json  104.234.180.88_7777.json  127.0.0.1:7777.json  15.235.181.17_7777.json  157.230.35.254_25594.json  204.10.193.197_7777.json  samp.phr-rp.net_7777.json
src/: CMakeLists.txt  client.cpp  client.hpp  discord.cpp  discord.hpp  dllmain.cpp  http.cpp  http.hpp  placeholder.cpp  placeholder.hpp  query.cpp  query.hpp  types.hpp
